# ARTagDetection

./: CMakeLists.txt  README.md  install.sh  run.sh
lib/: CMakeLists.txt
src/: helpers.h  helpers.hpp  imgProc.h  imgProc.hpp  main.cpp
